--- a/css/os.css
+++ b/css/os.css
@@ -128,8 +128,18 @@
 		cursor: default;
 
 	}
-	.os-menu-list >li:hover{
+
+	.os-menu-list >li >a{
+		text-decoration: none;
+		
+		display: block;
+		width: 100%;
+		height: 100%;
+		color:#333333;
+	}
+	.os-menu-list >li >a:hover{
 		background: rgba(0,0,0,0.5);
+		text-decoration: none;
 		color: #ffffff;
 		transition: all 0.7s;
 	}
